--- a/package.json
+++ b/package.json
@@ -11,10 +11,16 @@
   },
   "dependencies": {
     "axios": "^1.10.0",
+    "crypto-browserify": "^3.12.1",
+    "events": "^3.3.0",
+    "process": "^0.11.10",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.7.0",
+    "simple-peer": "^9.11.1",
     "socket.io-client": "^4.8.1",
+    "stream-browserify": "^3.0.0",
+    "util": "^0.12.5",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
